--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -1,3 +1,5 @@
+@import '~variables.scss';
+
 header {
     z-index: 2;
     position: relative;
@@ -7,5 +9,13 @@ header {
         color: inherit;
         text-decoration: none;
         padding: 0;
+    }
+}
+
+@media screen and (max-width: $media-mobile-max) {
+    button {
+        padding-left: 0px;
+        padding-right: 0px;
+        min-width: 64px;
     }
 }
